# Vx

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  compile_flags.txt  docgen.lua  test.c
.github/workflows/: docs.yml  pages.yml
Headers/Vx/: Context.h  Event.h  EventRing.h  Flag.h  Handle.h  Lifecycle.h  Ring.h  Status.h  Vx.h  Vx__Expose.h  Window.h  _Expose.h
Sources/: Context.c  EventRing.c  EventRing.h  Internal.c  Internal.h  Lifecycle.c  Status.c  Window.c
Sources/Win32/: Context.c  Handle.c  Internal.h  Lifecycle.c  Window.c
Tests/: Basic.c  Clear.c  Include.h
docs/: _config.yml  files.md  index.md
docs/assets/css/: style.scss
